<resources>
    <string name="app_name">DailyTag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enlarged_image">이미지 확대 보기</string>
    <string name="empty_todo">오늘은 할일이 없네요!</string>
    <string name="todo_description">나의 하루</string>
    <string name="filter_by_date">날짜별 필터</string>
    <string name="todo_label">할일</string>
    <string name="diary_label">일기</string>
    <string name="diary_placeholder">오늘 하루는 어땠나요?</string>
    <string name="title_modify">수정</string>
    <string name="title_delete">삭제</string>
    <string name="hint_name">이름</string>
    <string name="hint_phone">전화번호</string>
    <string name="text_save">저장</string>
    <string name="undo_label">Undo</string>
    <string name="redo_label">Redo</string>
    <string name="at_label">\@</string>
    <string name="delete_tag_description">Delete Tag</string>
    <string name="add_label">\ +\ </string>
    <string name="diary_content_label">Diary content</string>
    <string name="to_do_content_label">To-Do content</string>
    <string name="name_label">Name</string>
    <string name="phone_number_label">Phone Number</string>
</resources>
